# vessel-validator

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
examples/: basic_usage.py
tests/: test_imo_validation.py  test_mmsi_validation.py
vessel_validator/: __init__.py  validator.py
