[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vessel-validator"
version = "0.1.1"
authors = [
    {name = "Scitus Solutions Ltd.", email = "info@scitus.ca"}
]
maintainers = [
    {name = "Scitus Solutions Ltd.", email = "info@scitus.ca"}
]
description = "Professional MMSI and IMO number validator for maritime applications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
keywords = [
    "maritime",
    "vessel",
    "MMSI",
    "IMO",
    "validation",
    "shipping",
    "marine",
    "compliance",
    "AIS",
    "ballast water",
]
license = "MIT"

[project.urls]
Homepage = "https://scitus.ca"
Documentation = "https://github.com/scitus-ca/vessel-validator#readme"
Repository = "https://github.com/scitus-ca/vessel-validator"
"Bug Tracker" = "https://github.com/scitus-ca/vessel-validator/issues"
Changelog = "https://github.com/scitus-ca/vessel-validator/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["vessel_validator*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
vessel_validator = ["py.typed"]
